--- a/src/index.html
+++ b/src/index.html
@@ -8,23 +8,23 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 
     <!-- SEO Meta Tags -->
-    <meta name="description" content="Comprehensive bibliography and literature review on grassland typologies and Gross Primary Productivity (GPP) dynamics">
-    <meta name="keywords" content="Bibliography, Literature Review, Grassland Typologies, Productivity Dynamics, GPP, Scientometric Analysis">
-    <meta name="author" content="Remote Sensing and GIS Laboratory">
+    <meta name="description" content="Análise cienciométrica e síntese da produção científica sobre o Cerrado brasileiro. Explore redes de pesquisa, colaborações entre autores e tendências emergentes.">
+    <meta name="keywords" content="Cerrado, Redes Científicas, Análise Cienciométrica, Produção Científica, Pesquisa sobre o Cerrado, LAPIG, UFG">
+    <meta name="author" content="LAPIG - Laboratório de Sensoriamento Remoto e Geoprocessamento, UFG">
     <meta name="robots" content="index, follow">
 
     <!-- Open Graph Meta Tags -->
-    <meta property="og:title" content="Cerrado: uma análise cienciométrica">
-    <meta property="og:description" content="Comprehensive bibliography and literature review on grassland typologies and Gross Primary Productivity (GPP) dynamics">
+    <meta property="og:title" content="Cerrado em Rede: Análise Cienciométrica">
+    <meta property="og:description" content="Conheça o projeto que analisa a produção científica sobre o Cerrado brasileiro. Descubra autores, instituições e temas em destaque.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://lapig-ufg.github.io/grassland-literature-review">
-    <meta property="og:image" content="https://lapig-ufg.github.io/grassland-literature-review/assets/layout/images/logo.png">
+    <meta property="og:url" content="https://lapig-ufg.github.io/bibliografia-cerrado">
+    <meta property="og:image" content="https://lapig-ufg.github.io/bibliografia-cerrado/assets/layout/images/logo.png">
 
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Cerrado: uma análise cienciométrica">
-    <meta name="twitter:description" content="Comprehensive bibliography and literature review on grassland typologies and Gross Primary Productivity (GPP) dynamics">
-    <meta name="twitter:image" content="https://lapig-ufg.github.io/grassland-literature-review/assets/layout/images/logo.png">
+    <meta name="twitter:title" content="Cerrado em Rede: Análise Cienciométrica">
+    <meta name="twitter:description" content="Explore as redes científicas e tendências emergentes na pesquisa sobre o Cerrado brasileiro.">
+    <meta name="twitter:image" content="https://lapig-ufg.github.io/bibliografia-cerrado/assets/layout/images/logo.png">
 
     <link rel="stylesheet" type="text/css" href="assets/layout/styles/layout/preloading.css">
     <link id="theme-link" rel="stylesheet" type="text/css" href="assets/layout/styles/theme/theme-light/green/theme.css">
