Ajustes no index

--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,8 @@
     <link rel="stylesheet" type="text/css" href="assets/layout/styles/layout/preloading.css">
     <link id="theme-link" rel="stylesheet" type="text/css" href="assets/layout/styles/theme/theme-light/green/theme.css">
 
+    <meta http-equiv="content-type" content="no-cache, no-store, must-revalidate">
+
 </head>
 <body>
     <app-root>
